<resources>
    <string name="app_name">MultiPop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="start_computation">Start computation</string>
    <string name="do_api_requests">Do API requests</string>
    <string name="multipop">MultiPop!</string>
    <string name="select_file">Select File</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="create_sound">Create Sound</string>
    <string name="account_signup">Account Signup</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="account_login">Account Login</string>
    <string name="display_all_sounds">Display All Sounds</string>
    <string name="who_am_i">Who Am I</string>
</resources>